Fixing close css

--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -638,6 +638,7 @@
   vertical-align: top;
 }
 
+.fogbugz-helper-ticket-tweaks #formEditCase > .top > header+header,
 .fogbugz-helper-ticket-tweaks #main2 section.case #formEditCase .top>header+header,
 .fogbugz-helper-ticket-tweaks #main section.case #formEditCase .top>header+header {
   display: table-caption;
