--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -946,3 +946,17 @@
 .wysiwyg_toggle + * {
   clear: both;
 }
+
+  /* //////////////////////////
+ // Markdown
+////////////////////////// */
+
+.markdownified {
+  white-space: normal;
+  line-height: normal;
+}
+
+.markdownified h1 {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
