--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -987,3 +987,42 @@
   padding: 0;
   font-size: inherit;
 }
+
+.markdownified table {
+  margin: .5em 0;
+  border-collapse: collapse;
+  border-spacing: 0;
+  empty-cells: show;
+  border: 1px solid #cbcbcb;
+}
+
+.markdownified thead {
+  background-color: #e0e0e0;
+  color: #000;
+  text-align: left;
+  vertical-align: bottom;
+}
+
+.markdownified td,
+.markdownified th {
+  border-left: 1px solid #cbcbcb;
+  border-width: 0 0 0 1px;
+  font-size: inherit;
+  margin: 0;
+  overflow: visible;
+  padding: .5em 1em;
+}
+
+.markdownified th,
+.markdownified td {
+  padding: 0.5em 1em;
+}
+
+.markdownified td:first-child,
+.markdownified th:first-child {
+  border-left-width: 0;
+}
+
+.markdownified tr:nth-child(even) {
+  background: #f2f2f2;
+}
